# react-native-sherpa-onnx

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  .sherpa_onnx_version  CHANGELOG.md  CONTRIBUTING.md  README.md  STT_MODEL_SETUP.md  SherpaOnnx.podspec  TTS_MODEL_SETUP.md  build.gradle  eslint.config.mjs  gradle.properties  lefthook.yml  migration.md  package-lock.json  package.json  settings.gradle  tsconfig.build.json  tsconfig.json
.cursor/plans/: ort_android_aar_build_c27d3acb.plan.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  app-android-release.yml  build-ffmpeg-android-release.yml  build-libarchive-android-release.yml  build-libarchive-ios-release.yml  build-onnxruntime-android-release.yml  build-onnxruntime-qnn.yml  build-sherpa-onnx-android-release.yml  build-sherpa-onnx-framework.yml  build-sherpa-onnx-ios-framework.yml  collect-asr-model-structures.yml  collect-tts-model-structures.yml  framework-ffmpeg-ios-framework.yml  framework-libarchive-ios-framework.yml  framework-sherpa-onnx-ios-framework.yml  ios.yml  maven-build.yml  maven-release.yml  pr-gate.yml  release.yml  sdk-android.yml  sdk-ios.yml  sdk-maven.yml  sdk-release.yml  sdk-sdk.yml  test-asr-model-detect.yml  test-asr-validate.yml  test-model-detect.yml  test-sdk-integration.yml  test-tts-model-detect.yml  test-tts-validate.yml
.yarn/patches/: react-native-fs-npm-2.20.0.patch
android/: build.gradle  codegen.gradle  prebuilt-download.gradle  prebuilt-versions.gradle  proguard-rules.pro
android/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json
android/src/main/cpp/crypto/: sha256.cpp  sha256.h
android/src/main/cpp/jni/: sherpa-onnx-archive-helper.cpp  sherpa-onnx-archive-helper.h  sherpa-onnx-archive-jni.cpp  sherpa-onnx-audio-convert-jni.cpp  sherpa-onnx-jni.cpp  sherpa-onnx-model-detect-helper.cpp  sherpa-onnx-model-detect-helper.h  sherpa-onnx-model-detect-stt.cpp  sherpa-onnx-model-detect-tts.cpp  sherpa-onnx-model-detect.cpp  sherpa-onnx-model-detect.h  sherpa-onnx-module-jni.cpp  sherpa-onnx-stt-jni.cpp  sherpa-onnx-stt-wrapper.cpp  sherpa-onnx-stt-wrapper.h  sherpa-onnx-tts-jni.cpp  sherpa-onnx-tts-wrapper.cpp  sherpa-onnx-tts-wrapper.h  sherpa-onnx-tts-zipvoice-jni.cpp  sherpa-onnx-wrapper.cpp  sherpa-onnx-wrapper.h
android/src/main/cpp/jni/archive/: sherpa-onnx-archive-helper.cpp  sherpa-onnx-archive-helper.h  sherpa-onnx-archive-jni.cpp
android/src/main/cpp/jni/audio/: sherpa-onnx-audio-convert-jni.cpp
android/src/main/cpp/jni/model_detect/: sherpa-onnx-detect-jni-common.cpp  sherpa-onnx-detect-jni-common.h  sherpa-onnx-model-detect-helper.cpp  sherpa-onnx-model-detect-helper.h  sherpa-onnx-model-detect-stt.cpp  sherpa-onnx-model-detect-tts.cpp  sherpa-onnx-model-detect.h  sherpa-onnx-stt-wrapper.cpp  sherpa-onnx-tts-wrapper.cpp  sherpa-onnx-validate-stt.cpp  sherpa-onnx-validate-tts.cpp
android/src/main/cpp/jni/module/: sherpa-onnx-module-jni.cpp
android/src/main/cpp/jni/tts/: sherpa-onnx-tts-zipvoice-jni.cpp
android/src/main/cpp/libarchive/: CMakeLists.txt
android/src/main/cpp/libarchive_update/: update.js
android/test_build/: CMakeCache.txt
docs/: FFMPEG_INTEGRATION.md  MODEL_SETUP.md  PAD.md  STT_MODEL_SETUP.md  TTS_API_COMPARISON.md  TTS_MODEL_SETUP.md  audio-conversion.md  diarization.md  disable-ffmpeg.md  disable-libarchive.md  download-integration.md  download-manager.md  enhancement.md  execution-providers.md  hotwords.md  migration.md  model-setup.md  pcm-live-stream.md  pcm_live_stream.md  qnn.md  separation.md  streaming_mermaid.md  stt-streaming.md  stt.md  stt_streaming.md  tts-models.md  tts-streaming.md  tts.md  tts_features_future.md  tts_streaming.md  vad.md
example/: CRASHLYTICS_SETUP.md  Gemfile  README.md  app.json  firebase.json  index.js  package.json  tsconfig.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/ios/: Podfile
example/scripts/: download-models.js  model-download-config.json
example/src/: App.tsx  audioConfig.ts  cpuInfo.ts  engineCache.ts  modelConfig.ts
gradle/: android-defaults.gradle
ios/: SherpaOnnx+Assets.mm  SherpaOnnx+OnlineSTT.mm  SherpaOnnx+PcmLiveStream.mm  SherpaOnnx+STT.mm  SherpaOnnx+TTS.mm  SherpaOnnx.h  SherpaOnnx.mm  SherpaOnnxArchiveHelper.h  SherpaOnnxArchiveHelper.mm  SherpaOnnxAudioConvert.h  SherpaOnnxAudioConvert.mm  SherpaOnnxCoreMLHelper.swift  libarchive_darwin_config.h  sherpa-onnx-model-detect-helper.h  sherpa-onnx-model-detect-helper.mm  sherpa-onnx-model-detect-stt.mm  sherpa-onnx-model-detect-tts.mm  sherpa-onnx-model-detect.h  sherpa-onnx-model-detect.mm  sherpa-onnx-stt-wrapper.h  sherpa-onnx-stt-wrapper.mm  sherpa-onnx-tts-wrapper.h  sherpa-onnx-tts-wrapper.mm  sherpa-onnx-wrapper.h  sherpa-onnx-wrapper.mm
ios/archive/: sherpa-onnx-archive-helper.mm
ios/model_detect/: sherpa-onnx-model-detect-helper.h  sherpa-onnx-model-detect-helper.mm  sherpa-onnx-model-detect-stt.mm  sherpa-onnx-model-detect-tts.mm  sherpa-onnx-model-detect.h  sherpa-onnx-validate-stt.mm  sherpa-onnx-validate-tts.mm
ios/online_stt/: sherpa-onnx-online-stt-wrapper.h  sherpa-onnx-online-stt-wrapper.mm
ios/scripts/: patch-libarchive-includes.sh  setup-ios-libarchive.sh
ios/stt/: sherpa-onnx-stt-wrapper.mm
ios/tts/: sherpa-onnx-tts-wrapper.h  sherpa-onnx-tts-wrapper.mm
scripts/: check-model-csvs.sh  check-qnn-support.sh  copy-headers.js  setup-assets.js  setup-ios-framework.sh  switch-registry.js
src/: NativeSherpaOnnx.ts  index.tsx  utils.ts
src/audio/: index.ts
src/diarization/: index.ts
src/download/: ModelDownloadManager.ts  extractTarBz2.ts  index.ts  validation.ts
src/enhancement/: index.ts
src/separation/: index.ts
src/stt/: index.ts  streaming.ts  streamingTypes.ts  types.ts  whisperLanguages.ts
src/tts/: index.ts  streaming.ts  streamingTypes.ts  types.ts
src/vad/: index.ts
test/cpp/: CMakeLists.txt  model_detect_test.cpp  model_detect_test_utils.cpp  model_detect_test_utils.h
test/fixtures/: asr-models-expected.csv  (+3 more)
(+67 files in other folders)
